# Portfolio-AI-Agent

./: .gitignore  README.md  app.py  ingest.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
docs/: Certificate.docx  Certificate.md
eval/: data-gen.ipynb  data-gen.py  eval_results.csv  evaluations.ipynb  evaluations.py  ground_truth.csv
